  - Enable GitLab Import/Export for non-admin users.
  - Preserve label filters when sorting !6136 (Joseph Frazier)
  - Only update issuable labels if they have been changed
  - Take filters in account in issuable counters. !6496
  - Use custom Ruby images to test builds (registry.dev.gitlab.org/gitlab/gitlab-build-images:*)
  - Append issue template to existing description !6149 (Joseph Frazier)
  - Revoke button in Applications Settings underlines on hover.
  - Add missing values to linter !6276 (Katarzyna Kobierska Ula Budziszewska)
  - Fix Long commit messages overflow viewport in file tree
  - Revert avoid touching file system on Build#artifacts?
  - Add broadcast messages and alerts below sub-nav
  - Better empty state for Groups view
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Notify the Merger about merge after successful build (Dimitris Karakasilis)
  - Fix broken repository 500 errors in project list
  - Close todos when accepting merge requests via the API !6486 (tonygambone)
  - Changed Slack service user referencing from full name to username (Sebastian Poxhofer)
  - Add Container Registry on/off status to Admin Area !6638 (the-undefined)

v 8.12.4 (unreleased)
  - Fix type mismatch bug when closing Jira issue
  - Fix issues importing services via Import/Export
  - Restrict failed login attempts for users with 2FA enabled
  - Fix "Copy to clipboard" tooltip to say "Copied!" when clipboard button is clicked. (lukehowell)

v 8.12.3
  - Update Gitlab Shell to support low IO priority for storage moves

v 8.12.2 (unreleased)
  - Fix Import/Export not recognising correctly the imported services.
  - Fix snippets pagination